@@ -1,3 +1,10 @@
+1998-12-17  Alex Roberts <bse@dial.pipex.com>
+
+	* src/gE_prefs_box.c: Made the Gtk-Only dialog a more suitable size...
+	
+	* gedit.spec: Updated URL to current one.. ml.org is shutdown, no idea
+	  how long home.ml.org will be up now...
+
 1998-12-16  Evan Lawrence <evan@worldpath.net>
 
 	* src/gedit.c: Ditched all the signal handling crap.
